# django_jwt_middleware

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
src/django_jwt_middleware/: __init__.py  source.py
src/django_jwt_middleware.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
