[metadata]
name = django_jwt_middleware
version = 1.1.3
author = Rizki
author_email = rizkimaulana348@gmail.com
description = Authorize request with JSON Web Tokens
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rizki4106/django_jwt_middleware
project_urls =
    Bug Tracker = https://github.com/rizki4106/django_jwt_middleware/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src